--- a/Assets/css/main.css
+++ b/Assets/css/main.css
@@ -3395,6 +3395,9 @@ textarea.form-control-lg {
 #btn-login{
   margin-top: 13px;
 }
+.logo-dashboard{
+  margin-bottom: 5px;
+}
 
 
 .btn-primary {
