--- a/Assets/css/main.css
+++ b/Assets/css/main.css
@@ -241,6 +241,10 @@
   margin: 10px;
 }
 
+.bnt-rol{
+  margin-left: 20px;
+}
+
 .color-cards-instructores,
 .color-cards-competencias,
 .color-cards-usuarios,
