--- a/Assets/css/main.css
+++ b/Assets/css/main.css
@@ -15161,3 +15161,23 @@ color: #fff;
 .user .user-settings label {
   color: #666;
 }
+
+
+/* Posiciona el texto de derechos reservados en la parte inferior y centro de la pantalla */
+.copyright {
+  position: fixed;
+  bottom: 20px;
+  left: 50%; 
+  transform: translateX(-50%); 
+  font-size: 12px; 
+  padding: 10px 15px; 
+  opacity: .6;
+  z-index: 1000; 
+  font-family: Arial, sans-serif; 
+  text-align: center;
+  pointer-events: none;
+}
+.copyright a {
+  pointer-events:auto;
+  text-decoration: none;
+}
