--- a/Assets/css/main.css
+++ b/Assets/css/main.css
@@ -2463,6 +2463,7 @@ progress {
 }
 
 .form-control {
+
   display: block;
   width: 100%;
   padding: 0.375rem 0.75rem;
@@ -2695,6 +2696,10 @@ textarea.form-control-lg {
   padding-left: 0.5rem;
   font-size: 0.765625rem;
   border-radius: 4px;
+}
+
+.invalid-feedback{
+  position: absolute;
 }
 
 .form-select-lg {
@@ -3468,7 +3473,7 @@ textarea.form-control-lg {
 }
 
 #btn-login{
-  margin-top: 13px;
+  margin-top: 4px;
 }
 .logo-dashboard{
   margin-bottom: 5px;
@@ -5397,6 +5402,7 @@ textarea.form-control-lg {
   padding-left: 0;
   list-style: none;
 }
+
 
 .page-link {
   position: relative;
@@ -9146,7 +9152,9 @@ color: #fff;
 }
 
 .mb-3 {
-  margin-bottom: 1rem !important;
+  margin-bottom: 2rem !important;
+  margin-top: -.5rem !important;
+
 }
 
 .mb-4 {
@@ -9155,6 +9163,10 @@ color: #fff;
 
 .mb-5 {
   margin-bottom: 3rem !important;
+}
+.mb-6 {
+  margin-bottom: 2rem !important;
+  margin-top: 0px !important;
 }
 
 .mb-auto {
@@ -14231,6 +14243,28 @@ color: #fff;
             align-items: flex-start;
   }
 }
+
+
+@keyframes shake {
+  0%, 100% {
+      transform: translateX(0);
+  }
+  20%, 60% {
+      transform: translateX(-10px);
+  }
+  40%, 80% {
+      transform: translateX(10px);
+  }
+}
+
+.is-invalid.animate-error {
+  animation: shake 0.4s ease-in-out;
+}
+
+
+
+
+
 .app-title h1, .app-title .h1 {
   margin: 0;
   font-size: 24px;
@@ -14860,9 +14894,10 @@ color: #fff;
 .login-content .login-box {
   position: relative;
   min-width: 350px;
-  min-height: 390px;
+  min-height: 365px;
   background-color: #fff;
   border-radius: 10%;
+
   -webkit-box-shadow: 0px 29px 147.5px 102.5px rgba(0, 0, 0, 0.05), 0px 29px 95px 0px rgba(0, 0, 0, 0.16);
           box-shadow: 0px 29px 147.5px 102.5px rgba(0, 0, 0, 0.05), 0px 29px 95px 0px rgba(0, 0, 0, 0.16);
   -webkit-perspective: 800px;
@@ -14872,7 +14907,7 @@ color: #fff;
 }
 .login-content .login-box .login-head {
   margin-top: 0;
-  margin-bottom: 20px;
+  margin-bottom: 1px;
   padding-bottom: 20px;
   border-bottom: 1px solid #ddd;
   text-align: center;
@@ -15201,6 +15236,12 @@ color: #fff;
   }
   .input-icon.identificacion::before {
       background-image: url('../images/id-card.png');
+  }
+  .identificacion{
+    margin-top: -2rem;
+  }
+  .contraseña{
+    margin-top: 2rem;
   }
 
 /* contraseña */
