--- a/Assets/css/main.css
+++ b/Assets/css/main.css
@@ -14385,6 +14385,10 @@ color: #fff;
   margin-bottom: 0;
   padding-left: 0;
 }
+
+.breadcrumb-item a{
+  text-decoration: none;
+}
 .tile .tile-title-w-btn .btn-group {
   -webkit-box-flex: 0;
       -ms-flex: 0 0 auto;
