--- a/Assets/css/main.css
+++ b/Assets/css/main.css
@@ -15235,6 +15235,7 @@ color: #fff;
 
   .input-icon input {
       padding-left: 40px; 
+      z-index: 1000;
       }
 
   .input-icon::before {
@@ -15249,6 +15250,7 @@ color: #fff;
       background-repeat: no-repeat;
       color: #ccc;
       opacity: .4;
+      z-index: 1000;
   }
   .input-icon.identificacion::before {
       background-image: url('../images/id-card.png');
@@ -15281,6 +15283,7 @@ color: #fff;
       background-size: contain;
       background-repeat: no-repeat;
       color: #ccc;
+      z-index: 1000;
       opacity: .4;
   }
   .input-icons.password::before {
