--- a/Assets/css/main.css
+++ b/Assets/css/main.css
@@ -6433,6 +6433,7 @@ color: #fff;
   border-top: var(--bs-modal-footer-border-width) solid var(--bs-modal-footer-border-color);
   border-bottom-right-radius: var(--bs-modal-inner-border-radius);
   border-bottom-left-radius: var(--bs-modal-inner-border-radius);
+  
 }
 .modal-footer > * {
   margin: calc(var(--bs-modal-footer-gap) * 0.5);
@@ -11255,6 +11256,13 @@ color: #fff;
     margin-right: 0.5rem !important;
     margin-left: 0.5rem !important;
   }
+
+  .requerido{
+    color: #FF0000 !important;
+    font-weight: bold;
+    font-size: 15px;
+
+  }
   .mx-md-3 {
     margin-right: 1rem !important;
     margin-left: 1rem !important;
@@ -14313,8 +14321,6 @@ color: #fff;
   background: #ffffff;
   border-radius: 3px;
   padding: 20px;
-  -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
-          box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
   margin-bottom: 30px;
   -webkit-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
@@ -15235,6 +15241,13 @@ color: #fff;
   .input-icon input {
       padding-left: 40px; 
       z-index: 1000;
+      }
+
+
+      #requerio{
+        color: #ff0000 !important;
+        font-size: bold;
+
       }
 
   .input-icon::before {
