--- a/Assets/css/main.css
+++ b/Assets/css/main.css
@@ -149,7 +149,7 @@
   --bs-copyright:#fff;
   --bs-content-main:rgba(241, 241, 241, 0.534);
   --bs-header-from:#212529;
-  --bs-nav-from:#212529;
+  --bs-nav-from:#272a2ea4;
   --bs-gray-dark:#343a40;
   --bs-body-color: #fff;
   --bs-body-color-rgb: 222, 226, 230;
