--- a/Assets/css/main.css
+++ b/Assets/css/main.css
@@ -14485,7 +14485,13 @@ color: #fff;
 
 .material-half-bg {
   height: 100vh;
-  background-color:  #e4faec;
+  background-image: url(../images/fondo.png);
+  background-size: cover; /* La imagen cubre todo el contenedor */
+  background-position: center; /* La imagen se centra en el contenedor */
+  background-repeat: no-repeat; /* La imagen no se repite */
+  background-attachment: fixed; /* La imagen se fija al fondo y no se desplaza con el contenido */
+  height: 100vh; /* O el alto que necesites para el contenedor */
+  width: 100%;
   position: fixed;
   top: 0;
   left: 0;
