--- a/Assets/css/main.css
+++ b/Assets/css/main.css
@@ -142,10 +142,12 @@
   --bs-copyright:#7e7e7e;
   --bs-hover:#198754;
   --letras--bs:#fff !important;
+  --swal--color:color#000;
 }
 
 [data-bs-theme=dark] {
   color-scheme: dark;
+  --swal--color:color#000;
   --bs-hover:#7e7e7e86;
   --bs-copyright:#fff;
   --bs-content-main:rgba(241, 241, 241, 0.534);
@@ -220,8 +222,9 @@
   }
 }
 
+
 .sweet-alert{
-color: var(--letras--bs);
+color: #000 !important;
 }
 /* Estilo del contenedor y del botón circular */
 .theme-selector-container {
@@ -229,6 +232,9 @@ color: var(--letras--bs);
   bottom: 20px;
   right: 20px;
   z-index: 1000;
+}
+.delete-item{
+  background-color: #ff0000;
 }
 
 #theme-selector {
@@ -3458,7 +3464,6 @@ textarea.form-control-lg {
   --bs-btn-font-size: 0.875rem;
   --bs-btn-font-weight: 700;
   --bs-btn-line-height: 1.5;
-  --bs-btn-color: var(--bs-body-color);
   --bs-btn-bg: transparent;
   --bs-btn-border-width: 2px;
   --bs-btn-border-color: transparent;
@@ -3564,15 +3569,15 @@ textarea.form-control-lg {
 
 .btn-primary {
   --bs-btn-color: #FFF;
-  --bs-btn-bg: #ff0000;
-  --bs-btn-border-color: #ff0000;
+  --bs-btn-bg: #146c43;
+  --bs-btn-border-color: #146c43;
   --bs-btn-hover-color: #FFF;
-  --bs-btn-hover-bg: #ff0000;
-  --bs-btn-hover-border-color:  #ff0000;
+  --bs-btn-hover-bg: #0d4229;
+  --bs-btn-hover-border-color:  #0d4229;
   --bs-btn-focus-shadow-rgb: 38, 128, 116;
   --bs-btn-active-color: #FFF;
-  --bs-btn-active-bg: #ff0000;
-  --bs-btn-active-border-color: #ff0000;
+  --bs-btn-active-bg: #0d4229;
+  --bs-btn-active-border-color: #0d4229;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: #FFF;
   --bs-btn-disabled-bg: #ff0000;
@@ -5595,7 +5600,7 @@ textarea.form-control-lg {
   position: relative;
   padding: var(--bs-alert-padding-y) var(--bs-alert-padding-x);
   margin-bottom: var(--bs-alert-margin-bottom);
-  color: var(--bs-alert-color);
+  color: #000;
   background-color: var(--bs-alert-bg);
   border: var(--bs-alert-border);
   border-radius: var(--bs-alert-border-radius);
@@ -5607,7 +5612,7 @@ textarea.form-control-lg {
 
 .alert-link {
   font-weight: 700;
-  color: var(--bs-alert-link-color);
+  color: #000;
 }
 
 .alert-dismissible {
@@ -9727,7 +9732,7 @@ color: #fff;
 
 .text-muted, .app-notification__meta {
   --bs-text-opacity: 1;
-  color: var(--bs-secondary-color) !important;
+  color: #000;
 }
 
 .text-black-50 {
@@ -15447,4 +15452,5 @@ color: #fff;
   
  
 }
+
 
