--- a/Assets/css/main.css
+++ b/Assets/css/main.css
@@ -140,7 +140,7 @@
   --bs-header-from:#58c857;
   --bs-content-main:#E5E5E5;
   --bs-copyright:#7e7e7e;
-  --bs-hover:#198754;
+  --bs-hover:#153615;
   --letras--bs:#fff !important;
   --swal--color:color#000;
 }
@@ -13837,6 +13837,7 @@ color: #fff;
   content: "\f479";
   font-size: 21px;
 }
+
 .app-sidebar__toggle:focus, .app-sidebar__toggle:hover {
   color: #fff;
   background-color: var(--bs-header-from);
@@ -13995,7 +13996,7 @@ color: #fff;
   padding-top: 70px;
   width: 230px;
   overflow: auto;
-  z-index: 10;
+  z-index: 100;
   background-color:var(--bs-nav-from);
   -webkit-box-shadow: 10px 0px 63px -8px rgba(0,0,0,0.55);
   -moz-box-shadow: 10px 0px 63px -8px rgba(0,0,0,0.55);
@@ -14220,9 +14221,10 @@ color: #fff;
     margin-left: -3px;
     line-height: 1;
     opacity: 0;
-    background: #3e863e;
+    background: var(--bs-nav-from);
     border-top-right-radius: 4px;
     border-bottom-right-radius: 4px;
+    z-index: 10;
   }
   .sidebar-mini.sidenav-toggled .treeview:hover .app-menu__item {
     overflow: visible;
@@ -15447,7 +15449,7 @@ color: #fff;
   .copyright a {
     pointer-events:auto;
     text-decoration: none;
-    color: #146c43;
+    
   }
   
  
