--- a/Assets/css/main.css
+++ b/Assets/css/main.css
@@ -15456,5 +15456,29 @@ border-radius: 10%;
   
  
 }
+/* Chat de whatsapp */
+.whatsapp-bubble {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  width: 60px;
+  height: 60px;
+  background-color: #25d366; 
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+  z-index: 1000;
+  transition: transform 0.4s ease, box-shadow 0.4s ease; 
+}
 
+.whatsapp-bubble img {
+  width: 40px; 
+  height: 40px;
+}
 
+.whatsapp-bubble:hover {
+  transform: scale(1.05); 
+  box-shadow: 4px 4px 15px rgba(0, 0, 0, 0.2); 
+}
